# latex-lib

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
classes/: latex_array.py
docs/: README.ipynb
docs/source/: conf.py  index.rst  latex_lib.classes.rst  latex_lib.rst  latex_lib.utils.rst
latex_lib/classes/: latex_array.py
latex_lib/utils/: compile.py
src/: README.ipynb
src/latex_lib/: __init__.py
src/latex_lib/classes/: __init__.py  latex_array.py
src/latex_lib/utils/: compile.py  constants.py
tests/: compile_matrix_test.py  compile_vectors_test.py  latex_array_test.py
utils/: __init__.py  compile.py  constants.py
