[project]
name = "latex-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2"
]
[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "sphinx>=8.2.3",
    "sphinxawesome-theme>=5.3.2",
    "taskipy>=1.14.1",
]
[tool.taskipy.tasks]
test = {"cmd" = "python -m unittest discover -s tests -p *_test.py", "description"= "Run tests"}
build-readme = { "cmd" = "python -m jupyter nbconvert --to markdown --output-dir . ./docs/README.ipynb", "description" = "Build README.md"}
generate-docs = {"cmd" = "pushd docs && sphinx-apidoc -f -o source .. && make clean && make html && popd", "description" = "Generate docs from the code."}