[project]
name = "latex-lib"
version = "0.1.3"
authors = [{ name = "Sulaiman Gafoor", email = "suligzus@gmail.com" }]
description = "A package for allowing LaTeX array representations for NumPy array outputs in Jupyter Notebooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "numpy>=2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education"
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/suli-g/latex-lib"
"Issues" = "https://github.com/suli-g/latex-lib/issues"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "sphinx>=8.2.3",
    "sphinxawesome-theme>=5.3.2",
    "taskipy>=1.14.1",
    "twine>=6.1.0",
    "uv-publish>=1.3",
]

[tool.taskipy.tasks]
test = { "cmd" = "python -m unittest discover -s tests -p *_test.py", "description" = "Run tests" }
build-readme = { "cmd" = "python -m jupyter nbconvert --to markdown --output-dir . ./src/README.ipynb", "description" = "Build README.md" }
generate-docs = { "cmd" = "pushd docs && sphinx-apidoc -f -o source .. && make clean && make html && popd", "description" = "Generate docs from the code." }

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
